data/derived/fa15/progs/unify/prog0191.ml.out
Characters 72-75:
  | h::t -> [h] @ listReverse[digits(t)];;
                                    ^^^
Error: This expression has type 'a list
       but an expression was expected of type int
